--- a/.cvsignore
+++ b/.cvsignore
@@ -25,6 +25,7 @@ nautilus.desktop
 nautilus.spec
 nautilus-computer.desktop
 nautilus-file-management-properties.desktop
+nautilus-folder-handler.desktop
 nautilus-home.desktop
 obj
 stamp-h
