--- a/test/.cvsignore
+++ b/test/.cvsignore
@@ -8,3 +8,5 @@ test-nautilus-mime-actions-set
 test-nautilus-preferences-change
 test-nautilus-preferences-display
 test-nautilus-wrap-table
+test-nautilus-directory-async
+test-nautilus-search-engine
