--- a/configure.in
+++ b/configure.in
@@ -228,17 +228,24 @@ PKG_CHECK_MODULES(EXIF, libexif > exif_minver, [
 
 
 dnl ==========================================================================
+dnl search implementations
+dnl ****************************
+AM_CONDITIONAL(HAVE_BEAGLE, false)
 
 dnl libbeagle checking
-
-AC_MSG_CHECKING(for libbeagle)
-
-PKG_CHECK_MODULES(BEAGLE, libbeagle-0.0 >= beagle_minver, [
-    AC_DEFINE(HAVE_BEAGLE, 1, [Define to enable beagle support])
-    AC_SUBST(BEAGLE_CFLAGS)
-    AC_SUBST(BEAGLE_LIBS)
-    AM_CONDITIONAL(HAVE_BEAGLE, true)
-], [])
+			    			  
+AC_ARG_ENABLE(beagle, [  --disable-beagle     build without beagle support])
+msg_beagle=no
+if test "x$enable_beagle" != "xno"; then
+	PKG_CHECK_MODULES(BEAGLE, libbeagle-0.0 >= beagle_minver, [
+		  	  AM_CONDITIONAL(HAVE_BEAGLE, true)
+			  AC_DEFINE(HAVE_BEAGLE, 1, [Define to enable beagle support])
+			  ]
+                          msg_beagle=yes,
+	          	  [AM_CONDITIONAL(HAVE_BEAGLE, false)])
+        AC_SUBST(BEAGLE_CFLAGS)
+	AC_SUBST(BEAGLE_LIBS)
+fi
 
 dnl ==========================================================================
 
@@ -389,6 +396,7 @@ nautilus-$VERSION:
 	prefix:                 ${prefix}
 	source code location:	${srcdir}
 	compiler:		${CC}
+	beagle support:		$msg_beagle
 
 	profiling support:      ${profiling_support}
 "
