--- a/configure.in
+++ b/configure.in
@@ -19,6 +19,7 @@ m4_define(rsvg_minver,                 2.0.1)
 m4_define(xml_minver,                  2.4.7)
 m4_define(startup_notification_minver, 0.8)
 m4_define(exif_minver,                 0.5.12)
+m4_define(beagle_minver,               0.0.12)
 
 AC_INIT(nautilus, 2.13.3,
         [http://bugzilla.gnome.org/enter_bug.cgi?product=nautilus])
@@ -85,6 +86,7 @@ PKG_CHECK_MODULES(ALL, [
 	glib-2.0		>= glib_minver
 	gnome-desktop-2.0	>= gnome_desktop_minver
 	gnome-vfs-2.0		>= gnome_vfs_minver
+	gnome-vfs-module-2.0	>= gnome_vfs_minver
 	ORBit-2.0		>= orbit_minver
 	pango			>= pango_minver
 	gtk+-2.0		>= gtk_minver
@@ -224,6 +226,27 @@ PKG_CHECK_MODULES(EXIF, libexif > exif_minver, [
       AC_SUBST(EXIF_LIBS)
 ])])
 
+
+dnl ==========================================================================
+dnl search implementations
+dnl ****************************
+AM_CONDITIONAL(HAVE_BEAGLE, false)
+
+dnl libbeagle checking
+			    			  
+AC_ARG_ENABLE(beagle, [  --disable-beagle     build without beagle support])
+msg_beagle=no
+if test "x$enable_beagle" != "xno"; then
+	PKG_CHECK_MODULES(BEAGLE, libbeagle-0.0 >= beagle_minver, [
+		  	  AM_CONDITIONAL(HAVE_BEAGLE, true)
+			  AC_DEFINE(HAVE_BEAGLE, 1, [Define to enable beagle support])
+			  ]
+                          msg_beagle=yes,
+	          	  [AM_CONDITIONAL(HAVE_BEAGLE, false)])
+        AC_SUBST(BEAGLE_CFLAGS)
+	AC_SUBST(BEAGLE_LIBS)
+fi
+
 dnl ==========================================================================
 
 dnl Turn on the additional warnings last, so -Werror doesn't affect other tests.
@@ -293,7 +316,7 @@ LIBNAUTILUS_EXTENSION_LIBS="`$PKG_CONFIG --libs $LIBNAUTILUS_EXTENSION_MODULES`"
 AC_SUBST(LIBNAUTILUS_EXTENSION_LIBS)
 
 dnl core nautilus (must list bonobo-activation and libbonobo because idldir does not respect "requires")
-CORE_MODULES="eel-2.0 librsvg-2.0 bonobo-activation-2.0 libbonobo-2.0 esound gnome-desktop-2.0 $EXTRA_CORE_MODULES"
+CORE_MODULES="eel-2.0 librsvg-2.0 bonobo-activation-2.0 libbonobo-2.0 esound gnome-desktop-2.0 gnome-vfs-module-2.0 $EXTRA_CORE_MODULES"
 CORE_CFLAGS="`$PKG_CONFIG --cflags $CORE_MODULES` $x_cflags"
 AC_SUBST(CORE_CFLAGS)
 CORE_LIBS="`$PKG_CONFIG --libs $CORE_MODULES` $CDDA_LIBS $LIBJPEG $x_libs"
@@ -331,6 +354,17 @@ fi
 
 AM_GCONF_SOURCE_2
 
+dnl ==========================================================================
+
+AC_PATH_PROG(UPDATE_MIME_DATABASE, update-mime-database, no)
+
+AC_ARG_ENABLE(update-mimedb,
+   AC_HELP_STRING([--disable-update-mimedb],
+                   [disable the update-mime-database after install [default=no]]),,
+    enable_update_mimedb=yes)
+AM_CONDITIONAL(ENABLE_UPDATE_MIMEDB, test x$enable_update_mimedb = xyes)
+
+	
 AC_CONFIG_FILES([
 Makefile
 cut-n-paste-code/Makefile
@@ -362,6 +396,7 @@ nautilus-$VERSION:
 	prefix:                 ${prefix}
 	source code location:	${srcdir}
 	compiler:		${CC}
+	beagle support:		$msg_beagle
 
 	profiling support:      ${profiling_support}
 "
