--- a/Makefile.am
+++ b/Makefile.am
@@ -51,3 +51,5 @@ DISTCLEANFILES = \
   intltool-extract \
   intltool-merge \
   intltool-update
+
+DISTCHECK_CONFIGURE_FLAGS = --disable-update-mimedb
