Disable network icon on desktop by default.
2005-12-15  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	* libnautilus-private/nautilus-global-preferences.c:
	Disable network icon on desktop by default.

	* src/nautilus-main.c:
	* src/nautilus-navigation-window-ui.xml:
	* src/nautilus-spatial-window-ui.xml:
	* src/nautilus-window-menus.c:
	Add network to go/places menu.

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -814,7 +814,7 @@ most cases, this should be left alone. -->Sans 10</default>
       <applyto>/apps/nautilus/desktop/network_visible</applyto>
       <owner>nautilus</owner>
       <type>bool</type>
-      <default>true</default>
+      <default>false</default>
       <locale name="C">
       	<short>Network Servers icon visible on the desktop</short>
 	<long>
