--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,6 +2,7 @@
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
 data/browser.xml
+data/nautilus.xml.in
 libnautilus-extension/nautilus-column.c
 libnautilus-extension/nautilus-menu-item.c
 libnautilus-extension/nautilus-property-page.c
@@ -27,6 +28,7 @@ libnautilus-private/nautilus-icon-container.c
 libnautilus-private/nautilus-icon-dnd.c
 libnautilus-private/nautilus-icon-factory.c
 libnautilus-private/nautilus-program-choosing.c
+libnautilus-private/nautilus-search-directory-file.c
 libnautilus-private/nautilus-trash-directory.c
 libnautilus-private/nautilus-trash-file.c
 libnautilus-private/nautilus-tree-view-drag-dest.c
@@ -76,6 +78,8 @@ src/nautilus-notes-viewer.c
 src/nautilus-pathbar.c
 src/nautilus-places-sidebar.c
 src/nautilus-property-browser.c
+src/nautilus-query-editor.c
+src/nautilus-search-bar.c
 src/nautilus-shell-ui.xml
 src/nautilus-shell.c
 src/nautilus-side-pane.c
