--- a/configure.in
+++ b/configure.in
@@ -20,6 +20,7 @@ m4_define(xml_minver,                  2.4.7)
 m4_define(startup_notification_minver, 0.8)
 m4_define(exif_minver,                 0.5.12)
 m4_define(beagle_minver,               0.0.12)
+m4_define(tracker_minver,              0.0.1)
 
 AC_INIT(nautilus, 2.13.4,
         [http://bugzilla.gnome.org/enter_bug.cgi?product=nautilus])
@@ -230,6 +231,27 @@ PKG_CHECK_MODULES(EXIF, libexif > exif_minver, [
 dnl ==========================================================================
 dnl search implementations
 dnl ****************************
+
+AM_CONDITIONAL(HAVE_TRACKER, false)
+
+dnl libtracker checking
+			    			  
+AC_ARG_ENABLE(tracker, [  --disable-tracker     build without tracker support])
+msg_tracker=no
+if test "x$enable_tracker" != "xno"; then
+	PKG_CHECK_MODULES(TRACKER, tracker >= tracker_minver, [
+		  	  AM_CONDITIONAL(HAVE_TRACKER, true)
+			  AC_DEFINE(HAVE_TRACKER, 1, [Define to enable tracker support])
+			  ]
+                          msg_tracker=yes,
+	          	  [AM_CONDITIONAL(HAVE_TRACKER, false)])
+        AC_SUBST(TRACKER_CFLAGS)
+	AC_SUBST(TRACKER_LIBS)
+fi
+
+dnl ==========================================================================
+
+
 AM_CONDITIONAL(HAVE_BEAGLE, false)
 
 dnl libbeagle checking
@@ -396,6 +418,7 @@ nautilus-$VERSION:
 	prefix:                 ${prefix}
 	source code location:	${srcdir}
 	compiler:		${CC}
+	tracker support:	$msg_tracker
 	beagle support:		$msg_beagle
 
 	profiling support:      ${profiling_support}
