--- a/.cvsignore
+++ b/.cvsignore
@@ -12,6 +12,7 @@ config.log
 config.status
 config.sub
 configure
+depcomp
 intltool-extract
 intltool-extract.in
 intltool-merge
@@ -30,6 +31,7 @@ nautilus-home.desktop
 obj
 stamp-h
 stamp-h.in
+stamp-h1
 INSTALL
 install-sh
 missing
