--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -28,6 +28,7 @@ libnautilus-private/nautilus-icon-container.c
 libnautilus-private/nautilus-icon-dnd.c
 libnautilus-private/nautilus-icon-factory.c
 libnautilus-private/nautilus-program-choosing.c
+libnautilus-private/nautilus-query.c
 libnautilus-private/nautilus-search-directory-file.c
 libnautilus-private/nautilus-trash-directory.c
 libnautilus-private/nautilus-trash-file.c
