Add --no-desktop to the Exec command line options. (#326338)
2006-03-19  Martin Wehner  <martin.wehner@gmail.com>

	* nautilus-computer.desktop.in:
	* nautilus-folder-handler.desktop.in:
	* nautilus-home.desktop.in:
	* src/network-scheme.desktop.in:
	Add --no-desktop to the Exec command line options. (#326338)

	Patch from Saleem Abdulrasool

	* nautilus-computer.desktop.in:
	* nautilus-folder-handler.desktop.in:
	* nautilus-home.desktop.in:
	* nautilus.desktop.in:
	Remove obsolete X-Gnome-Bugzilla-OtherBinaries entry,
	none of the listed binaries does exist anymore.

--- a/nautilus-computer.desktop.in
+++ b/nautilus-computer.desktop.in
@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Computer
 _Comment=View your computer storage
 TryExec=nautilus 
-Exec=nautilus computer:
+Exec=nautilus --no-desktop computer:
 Icon=gnome-fs-client
 Terminal=false
 StartupNotify=true
@@ -12,4 +12,3 @@ Categories=Application;Core;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
-X-Gnome-Bugzilla-OtherBinaries=nautilus-adapter;nautilus-content-loser;nautilus-sidebar-loser;nautilus-text-view;nautilus-throbber;
