--- a/nautilus-home.desktop.in
+++ b/nautilus-home.desktop.in
@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Home Folder
 _Comment=View your home folder in the Nautilus file manager
 TryExec=nautilus 
-Exec=nautilus
+Exec=nautilus --no-desktop
 Icon=gnome-fs-home
 Terminal=false
 StartupNotify=true
@@ -12,4 +12,3 @@ Categories=Application;Core;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
-X-Gnome-Bugzilla-OtherBinaries=nautilus-adapter;nautilus-content-loser;nautilus-sidebar-loser;nautilus-text-view;nautilus-throbber;
