--- a/src/network-scheme.desktop.in
+++ b/src/network-scheme.desktop.in
@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Network Servers
 _Comment=View your network servers in the Nautilus file manager
 TryExec=nautilus
-Exec=nautilus network:
+Exec=nautilus --no-desktop network:
 Terminal=false
 StartupNotify=true
 Type=Application
