--- a/nautilus-folder-handler.desktop.in
+++ b/nautilus-folder-handler.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Open Folder
+_Name=Open Folder
 TryExec=nautilus 
 Exec=nautilus --no-desktop %U
 NoDisplay=true
