--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -36,6 +36,7 @@ libnautilus-private/nautilus-tree-view-drag-dest.c
 libnautilus-private/nautilus-undo-signal-handlers.c
 nautilus-computer.desktop.in
 nautilus-file-management-properties.desktop.in
+nautilus-folder-handler.desktop.in
 nautilus-home.desktop.in
 nautilus.desktop.in
 src/Nautilus_shell.server.in
