Translate the selinux context from raw form when displayin.
2006-07-25  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_file_get_selinux_context):
	Translate the selinux context from raw form when displayin.

--- a/libnautilus-private/Makefile.am
+++ b/libnautilus-private/Makefile.am
@@ -29,6 +29,7 @@ libnautilus_private_la_LDFLAGS =	\
 
 libnautilus_private_la_LIBADD =		\
 	$(dependency_static_libs)	\
+	$(SELINUX_LIBS)			\
 	$(BEAGLE_LIBS)			\
 	$(TRACKER_LIBS)			\
 	$(top_builddir)/libnautilus-extension/libnautilus-extension.la \
