--- a/configure.in
+++ b/configure.in
@@ -269,6 +269,25 @@ fi
 
 dnl ==========================================================================
 
+dnl ****************************
+dnl *** Check for libselinux ***
+dnl ****************************
+    
+SELINUX_LIBS=
+msg_selinux=no
+AC_CHECK_LIB(selinux, is_selinux_enabled,
+   [AC_CHECK_HEADERS(selinux/selinux.h,
+     [AC_SEARCH_LIBS(selinux_raw_to_trans_context, selinux, 
+       [AC_DEFINE(HAVE_SELINUX, 1, [Define to 1 if libselinux is available])
+        SELINUX_LIBS="-lselinux"
+        msg_selinux=yes])
+     ])
+   ])
+AC_SUBST(SELINUX_LIBS)
+
+	
+dnl ==========================================================================
+
 dnl Turn on the additional warnings last, so -Werror doesn't affect other tests.
 
 AC_ARG_ENABLE(more-warnings,
