Import ephy spinner and use ad throbber. This supports different icon
2006-10-18  Alexander Larsson  <alexl@redhat.com>

	* src/Makefile.am:
	* src/ephy-spinner.[ch]:
	* src/nautilus-throbber.[ch]:
	Import ephy spinner and use ad throbber.
	This supports different icon sizes.

	* src/nautilus-window-toolbars.c:
	Change throbber size when toolbar size changes.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -52,6 +52,8 @@ nautilus_shell_interface_idl_sources =		\
 
 nautilus_SOURCES = \
 	$(nautilus_shell_interface_idl_sources)	\
+	ephy-spinner.h				\
+	ephy-spinner.c				\
 	nautilus-actions.h			\
 	nautilus-application.c			\
 	nautilus-application.h			\
