Add X-GNOME-Bugzilla-Version marking to desktop files.
2006-11-06  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* nautilus-computer.desktop.in:
	* nautilus-computer.desktop.in.in:
	* nautilus-file-management-properties.desktop.in:
	* nautilus-file-management-properties.desktop.in.in:
	* nautilus-folder-handler.desktop.in:
	* nautilus-folder-handler.desktop.in.in:
	* nautilus-home.desktop.in:
	* nautilus-home.desktop.in.in:
	* nautilus.desktop.in:
	* nautilus.desktop.in.in:
	Add X-GNOME-Bugzilla-Version marking to desktop files.

--- a/nautilus-computer.desktop.in.in
+++ b/nautilus-computer.desktop.in.in
@@ -1,13 +1,15 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Open Folder
+_Name=Computer
+_Comment=View your computer storage
 TryExec=nautilus 
-Exec=nautilus --no-desktop %U
-NoDisplay=true
+Exec=nautilus --no-desktop computer:
+Icon=gnome-fs-client
 Terminal=false
 StartupNotify=true
 Type=Application
-MimeType=x-directory/gnome-default-handler;x-directory/normal;inode/directory;application/x-gnome-saved-search
+Categories=Application;Core;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
+X-GNOME-Bugzilla-Version=@VERSION@
