--- a/nautilus.desktop.in.in
+++ b/nautilus.desktop.in.in
@@ -13,3 +13,4 @@ OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
+X-GNOME-Bugzilla-Version=@VERSION@
