--- a/configure.in
+++ b/configure.in
@@ -420,6 +420,11 @@ libnautilus-private/Makefile
 libnautilus-extension/Makefile
 libnautilus-extension/libnautilus-extension.pc
 nautilus.spec
+nautilus-computer.desktop.in
+nautilus-file-management-properties.desktop.in
+nautilus-home.desktop.in
+nautilus.desktop.in
+nautilus-folder-handler.desktop.in
 po/Makefile.in
 src/Makefile
 src/file-manager/Makefile
