--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -34,11 +34,11 @@ libnautilus-private/nautilus-trash-directory.c
 libnautilus-private/nautilus-trash-file.c
 libnautilus-private/nautilus-tree-view-drag-dest.c
 libnautilus-private/nautilus-undo-signal-handlers.c
-nautilus-computer.desktop.in
-nautilus-file-management-properties.desktop.in
-nautilus-folder-handler.desktop.in
-nautilus-home.desktop.in
-nautilus.desktop.in
+nautilus-computer.desktop.in.in
+nautilus-file-management-properties.desktop.in.in
+nautilus-folder-handler.desktop.in.in
+nautilus-home.desktop.in.in
+nautilus.desktop.in.in
 src/Nautilus_shell.server.in
 src/file-manager/fm-desktop-icon-view.c
 src/file-manager/fm-directory-view.c
