Add new Nautilus logo from Ulisse Perusin, installed as named icon
2006-12-04  Luca Ferretti  <elle.uca@libero.it>

	* configure.in:
	* icons/Makefile.am:
	* icons/appicon/*:
	Add new Nautilus logo from Ulisse Perusin, installed
	as named icon ("nautilus") in $(prefix)/share/icons/hicolor/.

	* icons/nautilus-launch-icon.png:
	Removed.

	* src/nautilus-window-menus.c:
	Use the new named icon logo in about dialog.

--- a/configure.in
+++ b/configure.in
@@ -415,6 +415,12 @@ data/Makefile
 data/patterns/Makefile
 docs/Makefile
 icons/Makefile
+icons/appicon/Makefile
+icons/appicon/16x16/Makefile
+icons/appicon/22x22/Makefile
+icons/appicon/24x24/Makefile
+icons/appicon/32x32/Makefile
+icons/appicon/scalable/Makefile
 libbackground/Makefile
 libnautilus-private/Makefile
 libnautilus-extension/Makefile
