Update comments and some menu entries to match suggestions on
2006-12-13  Luca Ferretti  <elle.uca@libero.it>

	* nautilus-computer.desktop.in.in:
	* nautilus-file-management-properties.desktop.in.in:
	* nautilus-home.desktop.in.in:
	* src/nautilus-navigation-window-menus.c:
	* src/nautilus-spatial-window.c:
	* src/nautilus-window-menus.c:
	* src/network-scheme.desktop.in:

	Update comments and some menu entries to match suggestions on
	http://live.gnome.org/UsabilityTeam/Menu

--- a/nautilus-file-management-properties.desktop.in.in
+++ b/nautilus-file-management-properties.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 _Name=File Management
-_Comment=Change how files are managed
+_Comment=Change the behaviour and appearance of file manager windows
 Exec=nautilus-file-management-properties
 Icon=file-manager
 Terminal=false
