--- a/nautilus-home.desktop.in.in
+++ b/nautilus-home.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 _Name=Home Folder
-_Comment=View your home folder in the Nautilus file manager
+_Comment=Open your personal folder
 TryExec=nautilus 
 Exec=nautilus --no-desktop
 Icon=gnome-fs-home
