--- a/src/network-scheme.desktop.in
+++ b/src/network-scheme.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Network Servers
-_Comment=View your network servers in the Nautilus file manager
+_Name=Network
+_Comment=Browse bookmarked and local network locations
 TryExec=nautilus
 Exec=nautilus --no-desktop network:
 Terminal=false
