--- a/nautilus-computer.desktop.in.in
+++ b/nautilus-computer.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 _Name=Computer
-_Comment=View your computer storage
+_Comment=Browse all local and remote disks and folder accessible from this computer
 TryExec=nautilus 
 Exec=nautilus --no-desktop computer:
 Icon=gnome-fs-client
