Fix a typo in previous commit (folders, not folder)
2006-12-15  Luca Ferretti  <elle.uca@libero.it>

	* nautilus-computer.desktop.in.in:

	Fix a typo in previous commit (folders, not folder)

--- a/nautilus-computer.desktop.in.in
+++ b/nautilus-computer.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 _Name=Computer
-_Comment=Browse all local and remote disks and folder accessible from this computer
+_Comment=Browse all local and remote disks and folders accessible from this computer
 TryExec=nautilus 
 Exec=nautilus --no-desktop computer:
 Icon=gnome-fs-client
