Add an extra widget to the trash folder with the "Empty Trash" button.
2006-12-18  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-trash-bar.c:
	* src/nautilus-trash-bar.c:
	* src/nautilus-window-manage-views.c:

	Add an extra widget to the trash folder with the "Empty Trash"
	button. Kudos also to Lakin Wecker who came up with a similar
	patch some months ago, though it never went in.

	* src/nautilus-information-panel.c:

	Remove the "Empty Trash" and "Burn" buttons from the side pane
	since we now have extra location widgets.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -117,6 +117,8 @@ nautilus_SOURCES = \
 	nautilus-spatial-window.h               \
 	nautilus-throbber.c			\
 	nautilus-throbber.h			\
+	nautilus-trash-bar.c			\
+	nautilus-trash-bar.h			\
 	nautilus-window-bookmarks.c		\
 	nautilus-window-bookmarks.h		\
 	nautilus-window-manage-views.c		\
